# easyagic_backend

./: .env.example  EasyAgric.postman_collection.json  build.sh  db.sqlite3  main.py  pyproject.toml  rav.yaml  render.yaml  requirements.txt
apps/advisor/: apps.py  emails.py  urls.py  views.py
apps/crops/: data.py  services.py  urls.py  views.py
apps/dashboard/: urls.py  views.py
apps/history/: models.py  serializers.py  urls.py  views.py
apps/history/migrations/: 0001_add_history_notifications_language.py
apps/notifications/: models.py  services.py  urls.py  views.py
apps/notifications/migrations/: 0001_add_history_notifications_language.py
apps/soil/: apps.py  services.py  urls.py  views.py
apps/users/: apps.py  backends.py  emails.py  models.py  permissions.py  serializers.py  urls.py  views.py
apps/users/management/commands/: ensure_superuser.py
apps/users/migrations/: 0001_initial.py  0002_alter_user_email.py  0003_otp.py  0004_remove_farm_coordinates.py  0005_add_app_manager_role.py  0006_add_history_notifications_language.py  0007_add_african_languages.py
apps/utils/: email_translate.py
apps/weather/: services.py  urls.py  views.py
config/: exceptions.py  settings.py  urls.py
templates/emails/: advice_report.html  advice_report.txt  base.html  otp.html  otp.txt  welcome.html  welcome.txt
