[project]
name = "easyagric"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "dj-database-url>=3.1.2",
    "django>=6.0.6",
    "django-anymail>=15.0",
    "djangorestframework>=3.17.1",
    "google-genai>=2.10.0",
    "gunicorn>=26.0.0",
    "pillow>=12.2.0",
    "psycopg2-binary>=2.9.12",
    "python-decouple>=3.8",
    "rav>=0.4.3",
    "requests>=2.34.2",
]
